# lexical-analyse

./: CMakeLists.txt  Makefile  README.md
src/: main.c  owl_lexer.l  symbol_table.c  symbol_table.h  token.c  token.h
test/: animal_ontology.owl  pizza_ontology.owl  university_ontology.owl  vehicle_ontology.owl
